# rust-hangman

./: .gitignore  Cargo.toml  README.md
src/: error.rs  hangman.rs  main.rs
src/dictionary/: mod.rs  words.rs
src/game/: dict.rs  error.rs  game.rs  hangman.rs  mod.rs  player.rs  score.rs
src/hints/: mod.rs
src/utils/: cli.rs  error.rs  files.rs  mod.rs  time.rs
