[package]
name = "hangman"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = "allow"       # __DEV__

[dependencies]
rand = "0.8.4"
time = { version = "0.3", features = ["formatting", "parsing", "serde"] }
lazy-regex = "3.1.0"
# CLI
console = "0.15.8"
dialoguer = { version = "0.11.0", features = ["fuzzy-select"] }
# Files
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
globset = "0.4"
